# fastaudio

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.json  AUTHORS.rst  LICENSE.txt  README.md  codecov.yml  environment.yaml  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: create-release.yml  python-build-test.yml  trigger-docs.yml
data/: .gitignore
docs/: ESC50: Environmental Sound Classification.ipynb  Introduction to Fastaudio.ipynb  Introduction_to_Audio.ipynb  Learning resources.md  Makefile  Recording Audio in a Notebook.ipynb  Resampling_Benchmarks.ipynb  Training Tutorial.ipynb  Training_tutorial.ipynb  Tutorial 10 Speakers Identification.ipynb  Tutorial Speech Commands.ipynb  TutorialViceRecognition.ipynb  conf.py  index.md  index.rst
docs/API_Reference/: augment.preprocess.md  augment.signal.md  augment.spectrogram.md  core.config.md  core.signal.md  core.spectrogram.md
fastaudio/: __init__.py
fastaudio/core/: spectrogram.py
notebooks/: template.ipynb
scripts/: train_model.py
src/fastaudio/: __init__.py  all.py  ci.py  functional.py  util.py
src/fastaudio/augment/: all.py  functional.py  preprocess.py  signal.py  spectrogram.py
src/fastaudio/core/: all.py  config.py  signal.py  spectrogram.py
tests/: .test_signal_augment.py.swo  conftest.py  test_augment.py  test_config.py  test_core.py  test_functional.py  test_import_lib.py  test_kwargs.py  test_run_notebooks.py  test_signal_augment.py  test_spectrogram_augment.py  test_util.py  test_warnings.py
